Run system dependency checks early in the lifecycle of layout tests.

This CL removes the flag kCheckLayoutTestSysDeps and modifies Content Shell to
run CheckLayoutSystemDeps for layout tests.

Previously, run_web_tests.py would first run Content Shell with
kCheckLayoutTestSysDeps to check system dependencies, and then subsequently run
Content Shell with kRunWebTests to run the actual layout tests. The goal was for
the former step to discover system misconfigurations and early-exit so that
developers would not lose time debugging system configuration failures.

This CL's changes has several benefits:
  * kCheckLayoutTestSysDeps was using a different mechanism for starting and
    stopping the main thread's run loop. This was likely responsible for flaky
    crashes.
  * run_web_tests.py would exit with SYS_DEPS_EXIT_STATUS upon encountering a
    crash in kCheckLayoutTestSysDeps. This failure was not recoverable. Now,
    flaky crashes are caught using the normal layout test runner mechanism, and
    are appropriately retried.
  * It simplifies the logic for both Content Shell [removing a flag] and
    web_test_runner.py [removing yet another mechanism for launching the driver
    and parsing its results].

Bug: 884776
Change-Id: I7472f5e3b90e6d2578d2ed0be906e0e57ae9dbaa
Reviewed-on: https://chromium-review.googlesource.com/1229240
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Emil A Eklund <eae@chromium.org>
Reviewed-by: Camille Lamy <clamy@chromium.org>
Reviewed-by: Robert Ma <robertma@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592137}
Former-commit-id: 3e2f865c337b783b83d4d42fc1b09f523e04a1f9